--- a/client/package.json
+++ b/client/package.json
@@ -10,22 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
-    "@tanstack/react-query": "^5.17.19",
-    "@tanstack/react-query-devtools": "^5.17.21",
+    "@tanstack/react-query": "^5.17.15",
+    "@tanstack/react-query-devtools": "^5.17.15",
+    "apexcharts": "^3.41.0",
     "axios": "^1.6.5",
+    "date-fns": "^3.3.1",
+    "headlessui": "^0.0.0",
+    "jsvectormap": "^1.5.3",
+    "match-sorter": "^6.3.1",
     "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-big-calendar": "^1.8.6",
+    "react-calendar": "^4.8.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
-    "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
-    "react-multi-carousel": "^2.8.4",
-    "react-paginate": "^8.2.0",
-    "react-router-dom": "^6.21.3",
-    "yup": "^1.3.3"
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
+    "sort-by": "^0.0.2",
+    "webpack": "^5.90.0",
+    "yup": "^1.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/qs": "^6.9.11",
