--- a/admin/package.json
+++ b/admin/package.json
@@ -14,7 +14,12 @@
     "url": "https://tailadmin.com"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.7",
+    "@mui/material": "^5.15.7",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.14",
     "@tanstack/react-query": "^5.17.15",
     "@tanstack/react-query-devtools": "^5.17.15",
     "apexcharts": "^3.41.0",
@@ -30,12 +35,14 @@
     "react-calendar": "^4.8.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
+    "styled-components": "^6.1.8",
     "yup": "^1.3.3",
     "zod": "^3.22.4"
   },
@@ -45,6 +52,7 @@
     "@types/react-big-calendar": "^1.8.8",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.2.7",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "file-loader": "^6.2.0",
