--- a/admin/package.json
+++ b/admin/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.14",
+    "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.17.15",
     "@tanstack/react-query-devtools": "^5.17.15",
     "apexcharts": "^3.41.0",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
